# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1119 2012/10/10 22:16:47 zmedico Exp $

*portage-2.2.0_alpha137 (10 Oct 2012)

  10 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha137.ebuild,
  portage-9999.ebuild:
  2.2.0_alpha137 version bump. This includes all of the fixes in 2.1.11.26. Bug
  #210077 tracks all bugs fixed since portage-2.1.x. Also, sync 9999 ebuild with
  latest.

*portage-2.1.11.26 (10 Oct 2012)

  10 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.26.ebuild:
  2.1.11.26 version bump. This fixes bug #437872 (support *_beta* wildcard
  atoms) and also fixes a regression since 2.1.11.11 which triggers behavior
  similar to bug #403895 (emerge --load-average sometimes fails to schedule new
  builds when the load average drops). Bug #431026 tracks all bugs fixed since
  portage-2.1.11.9.

  10 Oct 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.24.ebuild,
  -portage-2.2.0_alpha135.ebuild:
  Remove old versions.

*portage-2.2.0_alpha136 (08 Oct 2012)

  08 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha136.ebuild:
  2.2.0_alpha136 version bump. This includes all of the fixes in 2.1.11.25. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.25 (08 Oct 2012)

  08 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.25.ebuild:
  2.1.11.25 version bump. This fixes bug #437180 (intermittent test failure in
  test_ipc_daemon), bug #437546 (use same repoman commit message for regular and
  manifest commits), and bug #437588 (fix Unknown tag error building rpms with
  4.10.0). Bug #431026 tracks all bugs fixed since portage-2.1.11.9.

  06 Oct 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.23.ebuild,
  -portage-2.2.0_alpha134.ebuild:
  Remove old versions.

*portage-2.2.0_alpha135 (04 Oct 2012)
