@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1119 2012/10/10 22:16:47 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1120 2012/10/13 04:04:04 zmedico Exp $
+
+  13 Oct 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.25.ebuild,
+  -portage-2.2.0_alpha136.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha137 (10 Oct 2012)
 
